[package]
name = "beartamer"
version = "0.1.0"
authors = ["Konstantin Stepanov <konstantin.stepanov@netcracker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8.5"
bson = "0.13.0"
mongodb = "0.3.12"
r2d2-mongodb = "0.2.2"
hyper = "0.14.10"
futures = "0.1.29"
serde = "1.0.101"
serde_json = "1.0.40"
serde_derive = "1.0.101"
envy = "0.4.0"
serde_urlencoded = "0.6.1"
